--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <a href="sch.html" class="btn" target="_blank">Cerita Seorang Cogan</a>
         <a href="Serch.html" class="btn" target="_blank">Penjelasan Tentang Script</a>
         <a href="listPromoter.html" class="btn" target="_blank">Products Cogan</a>
-        <a href="Sosmed.html" class="btn" target="_blank">Social Media Cogan</a>
+        <a href="sosmed.html" class="btn" target="_blank">Social Media Cogan</a>
 
         <!-- Navigasi ke halaman About Myself -->
 
